k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abcm-dashboard
  labels:
    app: abcm
spec:
  selector:
    app: abcm
    tier: web
  ports:
    - name: http
      port: 80
      targetPort: 5002
      protocol: TCP
  type: ClusterIP
